add coms3930 page

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     
 
                 <h4>
-                    Creative Embedded Systems:
+                    <a href="coms3930.html">Creative Embedded Systems</a> 
                 </h4>
 
                 <!--User Testimonial-->
