add arduino pong demo

--- a/coms3930.html
+++ b/coms3930.html
@@ -97,9 +97,12 @@
                     <nav id="nav-main">
                         <ul>
                             <li>
-                                <a href="#banner">Creative Embedded Systems</a>
+                                <a href="#banner">Home</a>
                             </li>
                             
+                            <li> 
+                                <a href="#arduino-pong">Arduino Pong Demo</a>
+                            </li>
                         </ul>
                     </nav>
                     <!--End of Main Navigation-->
@@ -156,6 +159,32 @@
         <!--End of Gallery-->
 
 
+        <!--ESP Demo-->
+        <section id="arduino-pong" class="scrollto clearfix">
+            <div class="row clearfix">
+
+                <div class="col-3">
+
+                    <div class="section-heading">
+                        <h3>01.2024</h3>
+                        <h2 class="section-title">Arduino Pong Demo</h2>
+            
+                    </div>
+
+                </div>
+
+                <div>
+
+                    <video width="600" height="450" controls autoplay muted> 
+                        <source src="images/arduino-pong.mov" type="video/mp4">
+                        Your browser does not support this video.
+                    </video>
+
+                </div>
+
+            </div>
+        </section>
+        <!--ESP Demo-->
     </main>
     <!--End Main Content Area-->
 
