--- a/index.html
+++ b/index.html
@@ -252,19 +252,18 @@
             <div class="row clearfix">
 
                 <div class="section-heading">
-                    <h3>SECTION IN PROGRESS</h3>
+                    <h3>COURSE SITES</h3>
                     <h2 class="section-title">Projects and Coursework</h2>
                 </div>
 
                 <h4>
-                    Computational Sound: 
+                    <!-- Computational Sound: 
                     <ul>
                         <li> <a target="_blank" href="https://aryanamoh.github.io/drumkit-program-synth/"><b>Drumkit Cellular Automata (2023)</b></a> </li>
                         <li> <a target="_blank" href="https://aryanamoh.github.io/zenkeyboard/"><b>Zen Keyboard (2023)</b></a> </li>
-                    </ul>
+                    </ul> -->
+                
                     
-
-                <h4>
                     <a href="coms3930.html">Creative Embedded Systems</a> 
                 </h4>
 
