add module 1 installation videos

--- a/coms3930.html
+++ b/coms3930.html
@@ -132,7 +132,6 @@
                 <!--Call to Action-->
                 <a href="index.html" class="button">ARYANA'S HOME PAGE</a>
                 <!--End Call to Action-->
-
             </div>
 
         </div><!--End of Row-->
@@ -148,12 +147,12 @@
         <section id="arduino-pong" class="scrollto clearfix">
             <div class="row clearfix">
 
-                <div class="col-3">
+                <div class="col-2">
 
                     <div class="section-heading">
                         <h3>01.2024</h3>
-                        <h2 class="section-title">Arduino Pong Demo</h2>
-            
+                        <h2 class="section-title">Pong Demo</h2>
+                        <p> This is a built-in example from the Arduino IDE. </p>
                     </div>
 
                 </div>
@@ -161,7 +160,7 @@
                 <div>
 
                     <video width="600" height="450" controls autoplay muted> 
-                        <source src="images/arduino-pong.mov" type="video/mp4">
+                        <source src="coms3930-media/arduino-pong.mov" type="video/mp4">
                         Your browser does not support this video.
                     </video>
 
@@ -175,7 +174,7 @@
         <section id="arduino-love" class="scrollto clearfix">
             <div class="row clearfix">
 
-                <div class="col-3">
+                <div class="col-2">
 
                     <div class="section-heading">
                         <h3>02.2024</h3>
@@ -211,12 +210,19 @@
 
                 </div>
 
-                <div>
+                <div class="col">
 
-                    <!-- <video width="600" height="450" controls autoplay muted> 
-                        <source src="images/arduino-pong.mov" type="video/mp4">
+                    <video width="600" height="450" controls> 
+                        <source src="coms3930-media/mod1_installation.mp4" type="video/mp4">
                         Your browser does not support this video.
-                    </video> -->
+                    </video> 
+
+                    <br>
+
+                    <video width="600" height="450" controls autoplay muted> 
+                        <source src="coms3930-media/mod1-ttgoscreen.mp4" type="video/mp4">
+                        Your browser does not support this video.
+                    </video> 
 
                 </div>
 
