--- a/coms3930.html
+++ b/coms3930.html
@@ -106,6 +106,9 @@
                             <li> 
                                 <a href="#arduino-love">Generative Art</a>
                             </li>
+                            <li> 
+                                <a href="#arduino-mc">Morse Code</a>
+                            </li>
                         </ul>
                     </nav>
                     <!--End of Main Navigation-->
@@ -178,7 +181,7 @@
 
                     <div class="section-heading">
                         <h3>02.2024</h3>
-                        <h2 class="section-title">Generative ♥️ Art</h2>
+                        <h2 class="section-title">Generative Art</h2>
                         </h2>
 
                         <p class="section-subtitle">Github: <a target="_blank" href="https://github.com/aryanamoh/generative-art">https://github.com/aryanamoh/generative-art</a> </p>
@@ -256,25 +259,51 @@
         <!--ESP Demo-->
 
 
-                <!--Gallery-->
-                <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
-                data-featherlight-filter="a">
+        <!--ESP Demo-->
+        <section id="arduino-mc" class="scrollto clearfix">
+            <div class="row clearfix">
 
-               <!-- <a href="images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="0.1s"><img src="images/gallery-images/gallery-image-1.jpg" alt="Landing Page"/></a>
-               <a href="images/gallery-images/gallery-image-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="0.3s"><img src="images/gallery-images/gallery-image-2.jpg" alt="Landing Page"/></a>
-               <a href="images/gallery-images/gallery-image-3.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="0.5s"><img src="images/gallery-images/gallery-image-3.jpg" alt="Landing Page"/></a> -->
-               <!-- <a href="images/gallery-images/gallery-image-4.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="1.1s"><img src="images/gallery-images/gallery-image-4.jpg" alt="Landing Page"/></a>
-               <a href="images/gallery-images/gallery-image-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="0.9s"><img src="images/gallery-images/gallery-image-5.jpg" alt="Landing Page"/></a>
-               <a href="images/gallery-images/gallery-image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-                  data-wow-delay="0.7s"><img src="images/gallery-images/gallery-image-6.jpg" alt="Landing Page"/></a> -->
+                <div class="col-2">
 
-       </aside>
-       <!--End of Gallery-->
+                    <div class="section-heading">
+                        <h3>03.2024</h3>
+                        <h2 class="section-title">Morse Code Translator</h2>
+                        </h2>
+
+                        <p class="section-subtitle">Github: <a target="_blank" href="https://github.com/aryanamoh/morse-code-interpreter">https://github.com/aryanamoh/morse-code-interpreter</a> </p>
+                        
+                        <p> For this project, </p>
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                    <video width="600" height="450" controls> 
+                        <source src="coms3930-media/morse-code-doc.MP4" type="video/mp4">
+                        Your browser does not support this video.
+                    </video> 
+
+                </div>
+
+        <!--Gallery-->
+        <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+        data-featherlight-filter="a">
+
+       <a href="coms3930-media/mc-doc-side.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+          data-wow-delay="0.1s"><img src="coms3930-media/mc-doc-side.jpg" alt="Morse Code Translation Tool"/></a>
+       <a href="coms3930-media/mc-doc-inside.JPG" data-featherlight="image" class="col-3 wow fadeIn"
+          data-wow-delay="0.3s"><img src="coms3930-media/mc-doc-inside.JPG" alt="Morse Code Translation Tool"/></a>
+       <a href="coms3930-media/mc-doc-top.jpeg" data-featherlight="image" class="col-3 wow fadeIn"
+          data-wow-delay="0.5s"><img src="coms3930-media/mc-doc-top.jpeg" alt="Morse Code Translation Tool"/></a>
+
+</aside>
+<!--End of Gallery-->
+            </div>
+
+
+        </section>
+        <!--ESP Demo-->
 
     </main>
     <!--End Main Content Area-->
